force-app/main/default/objects/nFORCE__System_Configuration__c/nFORCE__System_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>System Configuration</label>
</CustomObject>