force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Class_Name__c</fullName>
    <description>The field is required. It contains the fully qualified name of a Apex class that implements the ISystemConfigurable interface or the ASystemConfigurable abstract class.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>