force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Help_Text__c</fullName>
    <description>The field contains text that describes the System Configuration to the user in the nCino Administration user interface.</description>
    <label>Help Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>